# app/Models/UserSession.php
@@ -7,26 +7,26 @@ use Illuminate\Database\Eloquent\Model;
 use Illuminate\Database\Eloquent\Builder;
 
 /**
- * App\Models\UsersSessions
+ * App\Models\UserSession
  *
  * @property int $id
  * @property int $user_id Ид пользователя
  * @property string $access_token Токен
  * @property Carbon|null $created_at
  * @property Carbon|null $updated_at
- * @method static Builder|UsersSessions newModelQuery()
- * @method static Builder|UsersSessions newQuery()
- * @method static Builder|UsersSessions query()
- * @method static Builder|UsersSessions whereAccessToken($value)
- * @method static Builder|UsersSessions whereCreatedAt($value)
- * @method static Builder|UsersSessions whereId($value)
- * @method static Builder|UsersSessions whereUpdatedAt($value)
- * @method static Builder|UsersSessions whereUserId($value)
+ * @method static Builder|UserSession newModelQuery()
+ * @method static Builder|UserSession newQuery()
+ * @method static Builder|UserSession query()
+ * @method static Builder|UserSession whereAccessToken($value)
+ * @method static Builder|UserSession whereCreatedAt($value)
+ * @method static Builder|UserSession whereId($value)
+ * @method static Builder|UserSession whereUpdatedAt($value)
+ * @method static Builder|UserSession whereUserId($value)
  */
 
 /**
  * @OA\Schema (
- *    schema="UsersSessions",
+ *    schema="UserSession",
  *    @OA\Property(property="id", type="integer"),
  *    @OA\Property(property="user_id", type="integer"),
  *    @OA\Property(property="access_token", type="string"),
@@ -35,7 +35,7 @@ use Illuminate\Database\Eloquent\Builder;
  * )
  */
 
-class UsersSessions extends Model
+class UserSession extends Model
 {
     protected $table = 'users_sessions';
     protected $guarded = [];
